FIX: traces not flowing to jaeger
1. the traces were not flowing to jaeger. This was due to jaeger not being available in otel-collector-contrib docker image. Replaced it with zipkin.
2. added the events to spans in Pact Consumer Test.