@@ -165,41 +165,6 @@
                 </plugins>
             </build>
         </profile>
-        <!--<profile>
-            <id>qa_bdd</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${surefire.version}</version>
-                        <configuration>
-                            &lt;!&ndash;<parallel>methods</parallel>
-                            <threadCount>3</threadCount>
-                            <perCoreThreadCount>false</perCoreThreadCount>
-                            <properties>
-                                <property>
-                                    <name>dataproviderthreadcount</name>
-                                    <value>3</value>
-                                </property>
-                            </properties>&ndash;&gt;
-                            <systemPropertyVariables>
-                                &lt;!&ndash; need to provide user, userpass & cucumber.options for tags while calling maven &ndash;&gt;
-                                <env>${env.qa}</env>
-                                <browser>${browser}</browser>
-                                <driverType>${driverType}</driverType>
-                                <headless>${headless}</headless>
-                            </systemPropertyVariables>
-                            <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
-                            <suiteXmlFiles>
-                                <suiteXmlFile>./src/test/resources/testng_functional_suite.xml</suiteXmlFile>
-                            </suiteXmlFiles>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>-->
     </profiles>
 
     <build>
